refactor : 랜덤 로또 생성 책임 위임에 의한 코드 수정